--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "utils/nlg-eval"]
-	path = utils/nlg-eval
-	url = https://github.com/Maluuba/nlg-eval
+[submodule "utils/nlg_eval"]
+	path = utils/nlg_eval
+	url = https://github.com/thekej/nlg_eval.git
